# metricprobe

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: ALGORITHMS.md
examples/: demo.py  demo_config.yaml  workflow.yml
reports/: .metricprobe-published.json  README.md
scripts/: assert_runner_arch.py  check_demo_current.py  install_msodbcsql.py  scan_private_material.py  wait_for_mssql.py
src/metricprobe/: __init__.py  __main__.py  app.py  cli.py  config.py  discover.py  publish.py  report.py  status.py
src/metricprobe/extract/: __init__.py  canonical.py  dual.py
src/metricprobe/metrics/: __init__.py  batch.py  completion.py  dual_lag.py  freshness.py  parity.py  robust.py  volume.py
src/metricprobe/store/: __init__.py
src/metricprobe/viz/: __init__.py  figures.py  presentation.py
tests/: support.py
tests/cli/: test_cli_contract.py  test_delivery_lifecycle.py
tests/equivalence/: conftest.py  test_canonical_equivalence.py  test_coverage_gaps.py  test_harness_roundtrip.py
tests/golden/: test_completion_golden.py  test_dual_batch_golden.py  test_freshness_golden.py  test_grouping_set_equivalence.py  test_maturity.py  test_parity_golden.py  test_volume_golden.py
tests/properties/: test_curves.py
tests/render/: conftest.py  test_figures_smoke.py  test_publish.py  test_report.py
tests/synth/: generator.py  scenarios.py  test_generator.py
tests/unit/: test_algorithms.py  test_canonical_schema.py  test_config.py  test_discover.py  test_equivalence_coverage.py  test_leak_scan.py  test_runner_arch.py  test_skeleton.py  test_status.py  test_store.py
tests/unit/snapshots/: canonical_basic_aggregation_duckdb.sql  canonical_basic_aggregation_mssql.sql  canonical_basic_staging_duckdb.sql  canonical_basic_staging_mssql.sql  canonical_batch_alt_keys_aggregation_duckdb.sql  canonical_batch_alt_keys_aggregation_mssql.sql  canonical_batch_alt_keys_staging_duckdb.sql  canonical_batch_alt_keys_staging_mssql.sql  canonical_batch_alt_keys_uniqueness_duckdb.sql  canonical_batch_alt_keys_uniqueness_mssql.sql  canonical_bounded_staging_duckdb.sql  canonical_bounded_staging_mssql.sql  canonical_direct_aggregation_duckdb.sql  canonical_direct_aggregation_mssql.sql  canonical_via_composite_aggregation_duckdb.sql  canonical_via_composite_aggregation_mssql.sql  canonical_via_composite_staging_duckdb.sql  canonical_via_composite_staging_mssql.sql  dual_aggregation_duckdb.sql  dual_aggregation_mssql.sql  dual_staging_duckdb.sql  dual_staging_mssql.sql
